tests/ui/route-branch-double-decode.stderr
error[E0107]: struct takes 1 generic argument but 2 generic arguments were supplied
  --> tests/ui/route-branch-double-decode.rs:33:20
   |
33 |     endpoint: &mut Endpoint<'r, 0, SessionKit<'cfg, T, U, C, MAX_RV>>,
   |                    ^^^^^^^^      ----------------------------------- help: remove the unnecessary generic argument
   |                    |
   |                    expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `ROLE`
  --> src/endpoint.rs
   |
   | pub struct Endpoint<'r, const ROLE: u8> {
   |            ^^^^^^^^     --------------

error[E0382]: use of moved value: `branch`
  --> tests/ui/route-branch-double-decode.rs:43:25
   |
40 |     let branch = futures::executor::block_on(endpoint.offer()).unwrap();
   |         ------ move occurs because `branch` has type `RouteBranch<'_, '_, 0>`, which does not implement the `Copy` trait
41 |     let first_decode = branch.decode::<g::Msg<7, FramePayload>>();
   |                               ----------------------------------- `branch` moved due to this method call
42 |     core::hint::black_box(&first_decode);
43 |     let second_decode = branch.decode::<g::Msg<7, FramePayload>>();
   |                         ^^^^^^ value used here after move
   |
note: `RouteBranch::<'e, 'r, ROLE>::decode` takes ownership of the receiver `self`, which moves `branch`
  --> src/endpoint.rs
   |
   |         self,
   |         ^^^^
